--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -1,5 +1,5 @@
 <nav class="pink darken-3" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">{{appName}}</a>
+  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"></a>
     <ul class="right hide-on-med-and-down">
     </ul>
   </div>
