--- a/src/app/cookbook-detail/recipe/recipe.component.html
+++ b/src/app/cookbook-detail/recipe/recipe.component.html
@@ -1,12 +1,10 @@
 <div class="row">
-  <div *ngIf="recipe" class="card z-depth-2 col s6 offset-s3">
+  <div class="card z-depth-2 col s6 offset-s3">
     <div class="card-content pink-text">
-      <a (click)="goBack()" class="waves-effect waves-light btn-flat"><i class="material-icons left">chevron_left</i>Back</a><br>
-      <span class="card-title">{{recipe.name}}</span>
+      <a class="waves-effect waves-light btn-flat"><i class="material-icons left">chevron_left</i>Back</a><br>
+      <span class="card-title">}</span>
       <ul class="collection">
-        <li *ngFor="let ingridient of recipe.ingridients" class="collection-item">
-          {{ingridient.name}} 
-          ({{ingridient.quantity}}) 
+        <li class="collection-item">
         </li>
       </ul>
     </div>
