--- a/src/app/cookbooks/cookbook-item/cookbook-item.component.html
+++ b/src/app/cookbooks/cookbook-item/cookbook-item.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="cookbook" class="card z-depth-2">
   <div class="card-content pink-text">
-    <span class="card-title">{{cookbook.name}}</span>
-    <h6>Includes {{cookbook.recipes.length}} Recipes</h6>
+    <span class="card-title"></span>
+    <h6>Includes  Recipes</h6>
   </div>
   <div class="card-action">
-    <a (click)="viewCookbook()">See Recipes</a>
+    <a >See Recipes</a>
   </div>
 </div>
