--- a/src/app/shared/app-message/app-message.component.html
+++ b/src/app/shared/app-message/app-message.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-  <i class="material-icons {{iconClasses}} col s12">{{icon}}</i>
-  <span class="col s12 {{messageClasses}}">{{message}}</span>
+  <i class="material-icons {{iconClasses}} col s12"></i>
+  <span class="col s12 {{messageClasses}}"></span>
 </div>
