--- a/src/app/shared/search-box/search-box.component.html
+++ b/src/app/shared/search-box/search-box.component.html
@@ -1,4 +1,4 @@
 <div class="input-field">
-  <input [(ngModel)]="searchString" [placeholder]="searchPlaceHolder" id="search" type="text" required>
+  <input id="search" type="text" required>
   <label for="search"></label>
 </div>
